Update ObligatoriskOppgave2.md
Mangler noen få biter på oppgave 2, må leses gjennom for skrive feil