@@ -9,7 +9,7 @@ Rollene i gruppen fungerer egentlig ganske greit. Vi må nok fremdeles bli litt 
 Så langt er folk fornøyde med Teamlead og kundekontakt, se under for en klar beskrivelse av de ulike rollene.
 
 
---- 
+---
 **Trenger dere andre roller? Skriv ned noen linjer om hva de ulike rollene faktisk innebærer for dere.**
 
 Med tanke på hvordan arbeidsfordelingen gikk til forrige innlevering og hvilke oppgaver vi ser som må løses nå, er det bli gjort noen endringer i rollene. Otso er blitt hovedutvikleren vår da han løste mange problemer fra forrige innlevering. Vebjørn har vi nå satt til testarkitekt, hvor han vil ha som ansvar og utvikle tester. Merk at alle kommer til å delta på koden til spillet, men hovedutvikler og test-arkitekt, kommer nok ikke i like høygrad skrive svar på spørsmål. Rollene er som følger.
@@ -49,7 +49,7 @@ Teamlead sin oppgave blir å skrive referat og sørge for at alle har en grei fo
  - Drøfte problemer som må løses med gruppen
  - Jobbe tett med hovedutvikler slik at testene er aktuelle og har verdi
 
-
+---
 
 **Er det noen erfaringer enten team-messig eller mtp prosjektmetodikk som er verdt å nevne? Synes
 teamet at de valgene dere har tatt er gode? Hvis ikke, hva kan dere gjøre annerledes for å forbedre
@@ -57,19 +57,19 @@ måten teamet fungerer på?**
 
 Vi trenger å bli bedre på arbeidsfordeling. Det gjelder både å kommunisere hvilke oppgaver hver person gjør, men også å dele opp oppgaver i riktig størrelser og ha en klar stuktur på hvilke oppgaver som må gjøres. Ellers lærte vi fra forrige innlevering at hver oppgave bør gjøres, så godt det lar seg gjøre, 100% ferdig. Vi bør også komme bedre forberedt til møtene våre. Det har gått mye tid til dataproblemer. Siden det har vært så mange dataproblemer, er fordeling på hvem som skriver koden blitt noe ujevn. Vi bør på de neste innleveringene prøve å få en jevnere fordeling på hvem som skriver kode.
 
-
+---
 
 **Hvordan er gruppedynamikken?**
 
 Dynamikken i gruppen fungerer veldig bra. Alle sine meninger blir hørt og vi samarbeider alle sammen. Hadde vi derimot vært litt bedre på en klarere arbeidsfordeling ville nok effektiviteten blir litt bedre.
 
-
+---
 
 **Hvordan fungerer kommunikasjonen for dere?**
 
 Så langt er det veldig bra, vi har alle lastet ned Slack appen og bruker den aktivt. Det gjør det også lettere å planlegge møter. Kommunikasjonen internt i gruppen er også veldig bra.
 
-
+---
 
 **Gjør et kort retrospektiv hvor dere vurderer hva dere har klart til nå, og hva som kan forbedres. Dette
 skal handle om prosjektstruktur, ikke kode. Dere kan selvsagt diskutere kode, men dette handler ikke
@@ -77,7 +77,7 @@ om feilretting, men om hvordan man jobber og kommuniserer.**
 
 Som tidligere nevnt må gruppen bli bedre til å fordele oppgaver. Det var ikke like tydelig forrige gang hvem som skulle gjøre hva, som igjen reduserte effektiviteten til gruppen. Hadde vi vært flinkere til å ta ansvar for spesifikke oppgaver, og kun fokusere på å løse dem, ville vi nok spart en del tid. Med andre ord må vi ha en klar plan på hvilke oppgaver som skal løses, og hvilke oppgaver som folk jobber med å løse.
 
-
+---
 
 **Under vurdering vil det vektlegges at alle bidrar til kodebasen. Hvis det er stor forskjell i hvem som
 committer, må dere legge ved en kort forklaring for hvorfor det er sånn. Husk å committe alt. (Også
@@ -89,12 +89,13 @@ Hovedsakelig er det Otso som har gjort mesteparten av committene til koden, grun
 2.	Til forrige innlevering satt Heine og Otso, og prøvde å finne ut hvordan de får kart fra Tile kart inn i en java-klasse, og så vist på en skjerm. Dette satte de mye og parprogrammerte på Otso sin laptop. Dette tok mye mer tid enn forventet, da det måtte en del troubleshooting til.
 3.	Andreas og Vebjørn har tatt ansvar for å skrive svar til mange av spørsmålene og skrive ned brukerhistorikk, prosjektmetodikker, osv.
 
+---
 
 **Referat fra møter siden forrige leveranse skal legges ved.**
 
 Referat finner du i referat mappen.
 
-
+---
 
 **Bli enige om maks tre forbedringspunkter fra retrospektivet, som skal følges opp under neste sprint**
 
@@ -103,3 +104,116 @@ Referat finner du i referat mappen.
 - Være mer forberedt til samarbeidstimer slik at tid ikke forsvinner i dataproblemer
 
 
+## Deloppgave 2: krav
+
+### Brukerhistoriker 
+
+**Brukerhistorier: **
+
+Som spiller trenger jeg å se et brett for å lettere kunne følge med på hva som skjer i spillet.
+
+**Akseptansekriterie: **
+
+- Brettet må være 5 * 5 tiles (300px).
+- Hver rute må ha grafikk.
+- Programmet må kjøre i et eget vindu.
+
+**Arbeidsoppgaver:**
+
+- Lage et brett i Tiled.
+- Lage et prosjekt i gdx.
+- Få brettet i Tiled til å fungere med prosjektet i libgdx (Implementere brett-klasse).
+
+- - -
+
+**Brukerhistorier: **
+
+Som spiller må jeg kunne flytte en brikke på brettet slik at roboter kan flyttes.
+
+**Akseptansekriterie:**
+
+-	Brikken må kunne plasseres på brettet. (I form av at start posisjon er hard-kodet inn, det å drag-drope figurer på brettet blir en annen brukerhistorie.
+-	Brikkens posisjon kan endres etter den er plassert på brettet.
+
+**Arbeidsoppgaver:**
+-	Kunne plassere brikken på brettet (oppgi brikkens posisjon).
+-	Representere brikkens posisjon visuelt.
+-	Representere brikkens posisjon i kode.
+-	Oppdatere brikkens posisjon visuelt.
+-	Oppdatere brikkens posisjon i kode.
+- Kunne bruke 'q' til å snu figuren til høyre i samme rute som den står
+- Kunne bruke 'e' til å snu figuren til venstre i samme rute som den står
+- Kunne bruke 'w" til å gå frem over på brettet.
+
+- - -
+
+**Brukerhistorier: **
+
+Som spiller vil jeg at mine bevegelsesavgjørelser skal gjøre at jeg kan vinne/tape slik, at roboten ikke bare flyttes meningsløst rundt i et rutekart.
+
+**Akseptansekriterie: **
+
+- Spilleren må kunne vinne.
+- Brikken må kunne ta skade/dø.
+- Om brikken dør, må brikken kunne respawne på nytt, slik at brukeren slipper å restarte aplikasjonen.
+
+**Arbeidsoppgaver: **
+
+- Implementere et win-condition.
+- Implementere et liv system.
+- Implementere et muligheten til dø
+- Implementere et respawn system
+
+### Brukerhistoriker for oppgaver som vi skal starte med
+
+**Brukerhistorier: **
+
+(Denne brukerhistorien trenger en del arbeid når det kommer til den praktiske biten til utførelsen. Noen eller flere av arbeidsoppgavene kan dermed være gankse store/tid krevende.)
+
+Som spiller vil jeg velge kort jeg kan programmere roboten rundt med slik at roboten blir styrt og oppfører seg slik som i RobboRally.
+
+**Akseptansekriterie: **
+
+- Spilleren må kunne velge kort.
+- Spilleren må kunne velge rekkefølgen på valgte kort.
+- Spilleren må kunne legge ned kortene slik at roboten blir programmert.
+- Roboten må bevege seg etter kortene som blir lagt ned.
+
+
+**Arbeidsoppgaver: **
+
+- Lage en kort klasse.
+- Lage forskjellige kort, med forkjellige instrukser.
+- Implementere et system som gjør at spiller kan velge et kort.
+- Utvikle systemet videre slik at spilleren kan velge flere kort blandt en sammling av kort.
+- Gjøre slik at kortene påvirker bevegelsen til roboten.
+- Få roboten til å bevege seg riktig etter en sekvens med kort er blitt lagt ut
+
+
+---
+**Forklar kort hvordan dere har prioritert oppgavene fremover**
+
+Vi ønsket førts å få brettet til å kunne flytte brikken rundt på brettet. Nå som det er i orden, er planen fremover å prøve å få et kortsystem til å fungere, for så å gjøre spillet rundebasert. Da de mest elementære tingene i spillet er klart, det vil si brikker som kan flyttes på et brett ved bruk av kort, i et spill system som er runde basert, vil fokuset bli å få flest mulig funksjoner inn i spillet. De funksjonene som førts vil prioriteres er rullebane, laser, flagg og vegger.
+
+---
+
+**Forklar kort hvilke hovedkrav dere anser som en del av MVP og hvorfor. Hvis det er gjort endringer i
+rekkefølge utfra hva som er gitt fra kunde, hvorfor er dette gjort?**
+
+---
+
+**Oppdater hvilke krav dere har prioritert, hvor langt dere har kommet og hva dere har gjort siden forrige
+gang.**
+
+---
+
+### Bugs
+
+**Heine fikk følgende meldinger på macen sin, da han kjørte koden på fredags-gruppetimen. Spillet ville fremdeles kjøre. (28.02.20)**
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.lwjgl.LWJGLUtil$3 (file:/Users/heineolsenhartvedt/.m2/repository/org/lwjgl/lwjgl/lwjgl/2.9.3/lwjgl-2.9.3.jar) to method java.lang.ClassLoader.findLibrary(java.lang.String)
+WARNING: Please consider reporting this to the maintainers of org.lwjgl.LWJGLUtil$3
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+
+---
